# air-quality-sensor-node

./: .gitignore  README.md
.west/: config
Firmware/: .gitignore  CMakeLists.txt  Kconfig  Makefile  README.md  nrf52_pca10040.overlay  prj.conf
Firmware/boards/: nrf52_pca10040.conf
Firmware/release/: changelog.md  config.json
Firmware/src/: ads124s08.c  ads124s08.h  at_commands.c  at_commands.h  atof.c  atof.h  chipcap2.c  chipcap2.h  comms.c  comms.h  config.c  config.h  config_message.c  config_message.h  ee_nbiot_01.c  ee_nbiot_01.h  flash.c  flash.h  fota.c  fota.h  fota_tlv.c  fota_tlv.h  fota_uart_interface.c  fota_uart_interface.h  gpio.c  gpio.h  gps.c  gps.h  gps_cache.c  gps_cache.h  gps_std.c  gps_std.h  i2c_config.c  i2c_config.h  init.c  init.h  main.c  max14830.c  max14830.h  messagebuffer.c  (+16 more)
aqserver/: .gitignore  Makefile  go.mod  go.sum
common/protobuf/: aq.proto  aqconfig.options  aqconfig.proto  config.proto
enclosure/: README.md
enclosure/STEP/: PLA_AFE_spacer.step  PLA_OPC_hood_a.step  PLA_OPC_hood_b.step  PLA_PCB_bracket.step  PLA_Particle_intake_a.step  PLA_Particle_intake_b.step  PLA_Sensor_frame.step  PP_AFE_mounting_block.step  PP_Gas_intake.step
enclosure/STL/: PLA_AFE_spacer.stl  PLA_OPC_hood_a.stl  PLA_OPC_hood_b.stl  PLA_PCB_bracket.stl  PLA_Particle_intake_a.stl  PLA_Particle_intake_b.stl  PLA_Sensor_frame.stl  PP_AFE_mounting_block.stl  PP_Gas_intake.stl
enclosure/assembly/: Alphasense-A4-AFE-3-way-v2.f3d  OPC-N3.f3d  (+3 more)
manifest/: west.yml
server/: .gitignore  Makefile  README.md  go.mod  go.sum  import-cal-data.sh
(+218 files in other folders)
